# AI-Anime-Recommender

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: app.py
chroma_db/: chroma.sqlite3
config/: config.py
data/: anime_updated.csv
pipeline/: build_pipeline.py  pipeline.py
src/: data_loader.py  prompt_template.py  recommender.py  vector_store.py
